Script/Kube/Compose/traefik-web-ui-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-web-ui
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        backend:
          serviceName: traefik-web-ui
          servicePort: web
      - path: /signalr
        backend:
          serviceName: isignalrservice
          servicePort: 5002
